--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.css" />
 
         <!-- see demo.css! -->
-        <link rel="stylesheet" href="/demo.css" />
+        <link rel="stylesheet" href="./demo.css" />
 
     </head>
     <body>
@@ -40,7 +40,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
 
         <!-- see demo.js! -->
-        <script src="/demo.js"></script>
+        <script src="./demo.js"></script>
         <script>
             Demo.init();
         </script>
