--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <h2>Simple Croppie Upload Demo Example</h2>
-        <p><a href=https://github.com/foliotek/croppie>Croppie</a> is nice, but it's a little bit difficult to use it. So I made a simple working example for uploading demo.</p>
+        <p><a href=https://github.com/foliotek/croppie>Croppie</a> is nice, but it's a little bit difficult to use it. So I made a simple working example for uploading demo. src: <a href=https://github.com/kawa-/croppie-example>https://github.com/kawa-/croppie-example</a></p>
 
         <div class="demo-wrap upload-demo">
 
